--- a/app/GasConsumo/www/index.html
+++ b/app/GasConsumo/www/index.html
@@ -71,6 +71,7 @@
         </div>
 
         <!--  Scripts-->
+        <script src="js/factory/GasolinaFactory.js"></script>
         <script src="js/factory/VehiculosFactory.js"></script>
         <script src="js/factory/FavoritosFactory.js"></script>
         <script src="js/factory/ResultadoFactory.js"></script>
